checkpoint after long gap
Snapshot to resume consistent commits from 2026-01-12